# insitu

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  CONTRIBUTING.md  FILTERS.md  FILTER_SIM.md  README.md  USER_GUIDE.md  format.sh  index.md  package.xml
adam_filter_package/: CMakeLists.txt  package.xml  plugins.xml
adam_filter_package/inc/Heartbeat/: Heartbeat.hpp  Heartbeat_dialog.hpp
adam_filter_package/src/Heartbeat/: Heartbeat.cpp  Heartbeat_dialog.cpp
docs/: CONTRIBUTING.md  FILTERS.md  USER_GUIDE.md
inc/: addfilterdialog.hpp  addmodedialog.hpp  addviewdialog.hpp  filtered_view.hpp  insitu_utils.hpp  main_window.hpp  mode_container.hpp
inc/insitu/: addmodedialog.hpp  addviewdialog.hpp  filtered_view.hpp  main_window.hpp  mainwindowdesign.hpp
inc/insitu_common/: mode.hpp  model.hpp
include/insitu/: addmodedialog.hpp  addviewdialog.hpp  main_window.hpp  qnode.hpp
include/insitu_common/: filter.hpp  mode.hpp  model.hpp  view.hpp
insitu/: CMakeLists.txt  package.xml
insitu/inc/: add_filter_dialog.hpp  add_mode_dialog.hpp  add_view_dialog.hpp  addfilterdialog.hpp  addmodedialog.hpp  addviewdialog.hpp  filter_card.hpp  filter_factory.hpp  filter_graphics_item.hpp  filter_graphics_scene.hpp  filter_graphics_view.hpp  filter_info.hpp  filter_properties.hpp  filter_tree_item.hpp  filtered_view.hpp  insitu_utils.hpp  main_window.hpp  main_window_design.hpp  mainwindowdesign.hpp  mode_container.hpp  ros_image_frame.hpp  timed_run.hpp
insitu/lib/insitu/: filter.hpp
insitu/res/: images.qrc  resources.qrc
insitu/res/docs/: tutorial.html
insitu/scripts/: new_insitu_filter
insitu/scripts/template/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog_hdr.template  dialog_src.template  filter.cpp  filter.hpp  filter_hdr.template  filter_src.template  package.xml  plugins.xml
insitu/src/: add_filter_dialog.cpp  add_mode_dialog.cpp  add_view_dialog.cpp  addfilterdialog.cpp  addmodedialog.cpp  addviewdialog.cpp  filter_card.cpp  filter_factory.cpp  filter_graphics_item.cpp  filter_graphics_scene.cpp  filter_graphics_view.cpp  filter_info.cpp  filter_properties.cpp  filter_tree_item.cpp  filtered_view.cpp  insitu_utils.cpp  main.cpp  main_window.cpp  main_window_design.cpp  mainwindowdesign.cpp  mode_container.cpp  ros_image_frame.cpp
insitu_plugins/: CMakeLists.txt  README.md  insitu_plugins.xml  package.xml  plugins.xml
insitu_plugins/inc/Crosshair/: Crosshair.hpp  Crosshair_dialog.hpp
insitu_plugins/inc/Heartbeat/: Heartbeat.hpp  Heartbeat_dialog.hpp
insitu_plugins/inc/Label/: Label.hpp  Label_dialog.hpp
insitu_plugins/inc/Manip_boundary/: Manip_boundary.hpp  Manip_boundary_dialog.hpp
insitu_plugins/inc/Manipulation/: Manipulation.hpp  Manipulation_dialog.hpp
insitu_plugins/inc/Notification/: Notification.hpp  Notification_dialog.hpp
insitu_plugins/inc/Notify/: Notify.hpp  Notify_dialog.hpp
insitu_plugins/inc/Stats/: Stats.hpp  Stats_dialog.hpp
insitu_plugins/inc/Transparent/: Transparent.hpp  Transparent_dialog.hpp
insitu_plugins/inc/insitu_plugins/: crosshair.hpp  crosshair_dialog.hpp  navigation_filter_front.hpp  navigation_filter_rear.hpp  text_filter.hpp
insitu_plugins/src/Crosshair/: Crosshair.cpp  Crosshair_dialog.cpp
insitu_plugins/src/Heartbeat/: Heartbeat.cpp  Heartbeat_dialog.cpp
insitu_plugins/src/Label/: Label.cpp  Label_dialog.cpp
insitu_plugins/src/Manip_boundary/: Manip_boundary.cpp  Manip_boundary_dialog.cpp
insitu_plugins/src/Manipulation/: Manipulation.cpp  Manipulation_dialog.cpp
insitu_plugins/src/Notification/: Notification.cpp  Notification_dialog.cpp
insitu_plugins/src/Notify/: Notify.cpp  Notify_dialog.cpp
insitu_plugins/src/Stats/: Stats.cpp  Stats_dialog.cpp
insitu_plugins/src/Transparent/: Transparent.cpp  Transparent_dialog.cpp
insitu_plugins/src/insitu_plugins/: crosshair.cpp  crosshair_dialog.cpp  nav_filter_front.cpp  nav_filter_rear.cpp  text_filter.cpp
insitu_utils/: CMakeLists.txt  package.xml
insitu_utils/lib/insitu_utils/: painter.hpp  ros.hpp
insitu_utils/src/: painter.cpp  ros.cpp
lib/: CMakeLists.txt
lib/advanceddockingsystem/: CMakeLists.txt
lib/insitu/: filter.hpp
src/: addfilterdialog.cpp  addmodedialog.cpp  addviewdialog.cpp  filtered_view.cpp  insitu_utils.cpp  main.cpp  main_window.cpp  mainwindowdesign.cpp  mode_container.cpp
src/insitu/: addmodedialog.cpp  addviewdialog.cpp  filtered_view.cpp  insitu_utils.cpp  main.cpp  main_window.cpp  mainwindowdesign.cpp  qnode.cpp
src/insitu_common/: filter.cpp  mode.cpp  model.cpp  view.cpp
