<?xml version="1.0"?>
<package format="2">
  <name>insitu</name>
  <version>0.1.0</version>
  <description>

    insitu

  </description>
  <maintainer email="sci@gmail.com">sci</maintainer>
  <author>sci</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>image_transport</build_depend>
  
  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
 
</package>
