<?xml version="1.0"?>
<package format="2">
  <name>insitu</name>
  <version>0.1.0</version>
  <description>

    A ROS situational awareness framework for teleoperation and supervised autonomy.

  </description>
  <maintainer email="petefan.7@gmail.com">PaperFanz</maintainer>
  <author>Pete Fan</author>
  <license>BSD3</license>
  <url type="bugtracker">https://github.com/PaperFanz/insitu/issues</url>
  <url type="repository">https://github.com/PaperFanz/insitu</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
