<?xml version="1.0"?>
<package format="2">
  <name>insitu_plugins</name>
  <version>0.0.0</version>
  <description>editable text label</description>

  <maintainer email="petefan.7@gmail.com">PaperFanz</maintainer>
  <author>Pete Fan</author>
  <license>BSD3</license>
  <url type="bugtracker">https://github.com/PaperFanz/insitu/issues</url>
  <url type="repository">https://github.com/PaperFanz/insitu</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>insitu</build_depend>
  <build_depend>insitu_utils</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>ros_type_introspection</build_depend>

  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>insitu</build_export_depend>
  <build_export_depend>insitu_utils</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>ros_type_introspection</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>insitu</exec_depend>
  <exec_depend>insitu_utils</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ros_type_introspection</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <insitu plugin="${prefix}/plugins.xml"/>
  </export>
</package>
