<?xml version="1.0"?>
<package format="2">
  <name>insitu_plugins</name>
  <version>0.0.0</version>
  <description>editable text label</description>

  <maintainer email="petefan.7@gmail.com">PaperFanz</maintainer>
  <author>Pete Fan</author>
  <license>BSD3</license>
  <url type="bugtracker">https://github.com/PaperFanz/insitu/issues</url>
  <url type="repository">https://github.com/PaperFanz/insitu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>class_loader</depend>
  <depend>insitu</depend>
  <depend>insitu_utils</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>qt_build</depend>
  <depend>ros_type_introspection</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <insitu plugin="${prefix}/plugins.xml"/>
  </export>
</package>
